[package]
name = "transproxy-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = "0.5.5"
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros", "io-util", "net"] }
